# Robotlab_Practice_Tasks

./: .gitmodules  README.md
任务1_Armor/: CMakeLists.txt  README.md
任务1_Armor/include/: armor_identify.h
任务1_Armor/src/: armor_box_identify.cpp  kalman.cpp  light_blobs_identify.cpp  main.cpp  pnp.cpp
任务2_Rune/: CMakeLists.txt  README.md  kalman_csdn.cpp  kalman_csdn2.cpp
任务2_Rune/include/: energy.h  energy_param.h
任务2_Rune/src/: center_identify.cpp  fans_identify.cpp  init.cpp  kalman.cpp  main.cpp  split_color.cpp
任务4/: CMakeLists.txt
任务5_serial/: CMakeLists.txt
任务5_serial/src/: serial.cpp
任务6_PNP/: CMakeLists.txt  README.md
任务6_PNP/include/: armor_identify.h
任务6_PNP/src/: armor_box_identify.cpp  light_blobs_identify.cpp  main.cpp  performance.cpp  pnp.cpp
任务8_Learning/: MNIST.pth  MNIST2.pth  get_photo.py  lenet_train.py  lenet_train2.py  net.py  translate_onnx.py
任务8_Learning/MNIST/archive/: data.pkl
任务8_Learning/MNIST/archive/data/: 0  1  2  3  4  5  6  7
任务8_Learning/num_detect/: CMakeLists.txt  MNIST.onnx
任务8_Learning/num_detect/include/: num_detect.h
任务8_Learning/num_detect/src/: lenet_test.cpp  main.cpp
